--- a/Ornekler_slayt3.ipynb
+++ b/Ornekler_slayt3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,16 +314,288 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Numpy\n",
+    "terminalden python -m pip install matplotlib   ile yüklendi.\n",
+    "https://code.visualstudio.com/docs/python/python-tutorial   \n",
+    "\"Install and use packages\"  başlığı"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ptyhon list:\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "numpy list:\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "***********************\n",
+      "1\n",
+      "2\n",
+      "///////////////////////\n",
+      "(10,)\n",
+      "(1, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "python_list=[0,1,2,3,4,5,6,7,8,9]\n",
+    "numpy_array = np.array([0,1,2,3,4,5,6,7,8,9])\n",
+    "numpy_Array2=np.array([[0,1,2,3,4,5,6,7,8,9]])\n",
+    "print(\"Ptyhon list:\")\n",
+    "print(python_list)\n",
+    "print(\"numpy list:\")\n",
+    "print(numpy_array)\n",
+    "print(\"***********************\")\n",
+    "print(numpy_array.ndim)\n",
+    "print(numpy_Array2.ndim)\n",
+    "print(\"///////////////////////\")\n",
+    "print(numpy_array.shape)\n",
+    "print(numpy_Array2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n",
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "________________________\n",
+      "[0 3 6 9]\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      ".......................\n",
+      "[2 3]\n",
+      "[0 2 4 6 8]\n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n",
+      "***********************\n",
+      "[[8 9]\n",
+      " [6 7]\n",
+      " [4 5]\n",
+      " [2 3]\n",
+      " [0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "numpy_array = np.array([0,1,2,3,4,5,6,7,8,9])\n",
+    "reshape52=numpy_array.reshape(5,2)\n",
+    "print(reshape52)\n",
+    "reshape25=numpy_array.reshape(2,5)\n",
+    "print(reshape25)\n",
+    "print(\"________________________\")\n",
+    "print(np.arange(0,10,3))\n",
+    "print(np.arange(10))\n",
+    "print(np.arange(0,10,1))\n",
+    "print(\".......................\")\n",
+    "print(reshape52[1])\n",
+    "print(reshape52[:,0])\n",
+    "print(reshape52[:,0:2])\n",
+    "print(\"***********************\")\n",
+    "print(reshape52[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "________________________\n",
+      "[[[1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1.]]]\n",
+      "________________________\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.zeros((2,3)))\n",
+    "print(\"________________________\")\n",
+    "print(np.ones((2,3,4)))\n",
+    "print(\"________________________\")\n",
+    "print(np.eye((3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]\n",
+      " [0 1]\n",
+      " [2 3]\n",
+      " [4 5]\n",
+      " [6 7]\n",
+      " [8 9]]\n",
+      "[[0 1 0 1]\n",
+      " [2 3 2 3]\n",
+      " [4 5 4 5]\n",
+      " [6 7 6 7]\n",
+      " [8 9 8 9]]\n",
+      "________________________\n",
+      "2.5\n",
+      "2.9166666666666665\n",
+      "1.707825127659933\n",
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "numpy_array = np.array([0,1,2,3,4,5])\n",
+    "reshape32=numpy_array.reshape(3,2)\n",
+    "print(np.concatenate([reshape52,reshape52],axis=0))\n",
+    "print(np.concatenate([reshape52,reshape52],axis=1))\n",
+    "print(\"________________________\")\n",
+    "print(numpy_array.mean())\n",
+    "print(numpy_array.var())\n",
+    "print(numpy_array.std())\n",
+    "print(np.median(numpy_array))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "________________________\n",
+      "[[ 4  6]\n",
+      " [ 8 10]\n",
+      " [12 14]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[ 1  4]\n",
+      " [ 9 16]\n",
+      " [25 36]]\n",
+      "[[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]]\n",
+      "________________________\n",
+      "[[ 9 12 15]\n",
+      " [19 26 33]\n",
+      " [29 40 51]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "numpy_array = np.array([1,2,3,4,5,6])\n",
+    "reshape32=numpy_array.reshape(3,2)\n",
+    "reshape23=numpy_array.reshape(2,3)\n",
+    "print(reshape32)\n",
+    "print(\"________________________\")\n",
+    "print(reshape32+(reshape32+2))\n",
+    "print(reshape32-reshape32)\n",
+    "print(reshape32*reshape32)\n",
+    "print(reshape32/reshape32)\n",
+    "print(\"________________________\")\n",
+    "print(np.dot(reshape32,reshape23))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "[[1 3 5]\n",
+      " [2 4 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "numpy_array = np.array([1,2,3,4,5,6])\n",
+    "reshape32=numpy_array.reshape(3,2)\n",
+    "print(reshape32)\n",
+    "print(reshape32.T)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True  True  True]\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "numpy_array = np.array([1,2,3,4,5,6])\n",
+    "boolean_array=numpy_array>3\n",
+    "print(boolean_array)\n",
+    "print(numpy_array[boolean_array])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8",
+   "display_name": "Python 3.11.0 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -337,12 +609,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6c7b24f2af6d8326af019a2c1e3781e3fd7f155564fc6b2146da6d6b307574a7"
+    "hash": "04031fde6a6f63c5ee7515a5e60452a050c3cfbc37c5728b01b16ecd740e17ca"
    }
   }
  },
