--- a/netflix.ipynb
+++ b/netflix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3005,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3974,7 +3974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -10385,7 +10385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -10412,39 +10412,33 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          461,
-          464,
-          512,
-          577,
-          605,
-          613,
-          696,
-          736,
-          774,
-          827,
-          829,
-          859,
-          1210,
+          2624,
           1600,
-          2624
+          1210,
+          859,
+          829,
+          774,
+          736,
+          696,
+          613,
+          605,
+          512,
+          461
          ],
          "xaxis": "x",
          "y": [
-          " TV Comedies",
-          " Comedies",
-          " Thrillers",
-          " International TV Shows",
-          "Children & Family Movies",
-          " Romantic Movies",
-          " TV Dramas",
-          " Independent Movies",
-          "International TV Shows",
-          " Dramas",
-          "Documentaries",
-          "Action & Adventure",
-          "Comedies",
+          "International Movies",
           "Dramas",
-          " International Movies"
+          "Comedies",
+          "Action & Adventure",
+          "Documentaries",
+          "International TV Shows",
+          "Independent Movies",
+          "TV Dramas",
+          "Romantic Movies",
+          "Children & Family Movies",
+          "Thrillers",
+          "TV Comedies"
          ],
          "yaxis": "y"
         }
@@ -11309,17 +11303,17 @@
     "category=filtered_category.groupby(['Category']).size().reset_index(name='Total Content')\n",
     "category=category[category.Category !='Bilinmiyor']\n",
     "category=category.sort_values(by=['Total Content'],ascending=False)\n",
-    "\n",
+    "category[\"Category\"]=(category[\"Category\"].str.rstrip()).str.lstrip()\n",
     "categoryTop5=category.head(15)\n",
-    "categoryTop5=categoryTop5.sort_values(by=['Total Content'])\n",
-    "fig2=px.bar(categoryTop5,x='Total Content',y='Category')\n",
+    "df2 = categoryTop5.drop_duplicates(subset=[\"Category\"])\n",
+    "fig2=px.bar(df2,x='Total Content',y='Category')\n",
     "fig2.show()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14501,7 +14495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
